--- a/config/locales/devise_invitable.en.yml
+++ b/config/locales/devise_invitable.en.yml
@@ -5,7 +5,7 @@ en:
     invitations:
       send_instructions: "An invitation email has been sent to %{email}."
       invitation_token_invalid: "The invitation token provided is not valid!"
-      updated: "Your password was set successfully. You are now signed in."
+      updated: "Welcome on board! Your password was set successfully. You are now signed in."
       updated_not_active: "Your password was set successfully."
       no_invitations_remaining: "No invitations remaining"
       invitation_removed: "Your invitation was removed."
@@ -18,8 +18,8 @@ en:
     mailer:
       invitation_instructions:
         subject: "Invitation instructions"
-        hello: "Hello %{email}"
-        someone_invited_you: "Someone has invited you to %{url}, you can accept it through the link below."
+        hello: "Welcome %{email}!"
+        someone_invited_you: "The Heron Market team is happy to welcome you on the plateform %{url}. To officially be part of the exclusive Heron Market merchant program you have to accept our invitation by clicking on the link below."
         accept: "Accept invitation"
         accept_until: "This invitation will be due in %{due_date}."
         ignore: "If you don't want to accept the invitation, please ignore this email. Your account won't be created until you access the link above and set your password."
