--- a/config/locales/devise_invitable.en.yml
+++ b/config/locales/devise_invitable.en.yml
@@ -19,7 +19,7 @@ en:
       invitation_instructions:
         subject: "Invitation instructions"
         hello: "Welcome %{email}!"
-        someone_invited_you: "The Heron Market team is happy to welcome you on the plateform %{url}. To officially be part of the exclusive Heron Market merchant program you have to accept our invitation by clicking on the link below."
+        someone_invited_you: "The Heron Market team is happy to welcome you on the plateform %{url}."
         accept: "Accept invitation"
         accept_until: "This invitation will be due in %{due_date}."
         ignore: "If you don't want to accept the invitation, please ignore this email. Your account won't be created until you access the link above and set your password."
